Swap i18n & internationalization in title & description

--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -1,6 +1,6 @@
 ---
-title: Add internationalization features 
-description: Use dynamic routing and content collections to add i18n support to your Astro site.
+title: Add i18n features 
+description: Use dynamic routing and content collections to add internationalization support to your Astro site.
 type: recipe
 i18nReady: false
 ---
