Add `toLocaleString()` tip

--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -120,7 +120,7 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
         const { Content } = await page.render();
         ---
         <h1>{page.data.title}</h1>
-        <p>by {page.data.author} at {formattedDate}</p>
+        <p>by {page.data.author} • {formattedDate}</p>
         <Content/>
         ```
       </Fragment>
@@ -144,13 +144,18 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
         const { Content, headings } = await page.render();
         ---
         <h1>{page.data.title}</h1>
-        <p>by {page.data.author} at {formattedDate}</p>
+        <p>by {page.data.author} • {formattedDate}</p>
         <Content/>
         ```
       </Fragment>
     </StaticSsrTabs>
 
     📚 Read more about [dynamic routing](/en/core-concepts/routing/#dynamic-routes).
+
+    :::tip[Date formatting]
+    The example above uses the built-in [`toLocaleString()` date-formatting method](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/toLocaleString) to create a human-readable string from our frontmatter date.
+    This ensures the date and time are formatted to match the user’s language.
+    :::
 
 ### Translate UI strings
 
