--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -84,7 +84,7 @@ import type { SomeType } from './script';
 
 This way, you avoid edge cases where Astro's bundler may try to incorrectly bundle your imported types as if they were JavaScript.
 
-In your `.tsconfig` file, you can instruct TypeScript to help with this.
+You can configure TypeScript to enforce type imports in your `.tsconfig` file.
 
 <Tabs client:visible sharedStore="typescript-version">
 	<Fragment slot="tab.4.9">TypeScript ≤4.9</Fragment>
