Fix type error (thank you Bryce!)
Co-authored-by: Bryce Russell <brycetrussell@gmail.com>

--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -197,7 +197,7 @@ Create dictionaries of terms to translate the labels for UI elements around your
     }
     
     export function useTranslations(lang: keyof typeof ui) {
-      return function t(key: keyof typeof ui[defaultLang]) {
+      return function t(key: keyof typeof ui[typeof defaultLang]) {
         return ui[lang][key] || ui[defaultLang][key];
       }
     }
