Fix type error — thanks Bryce pt. 2

--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -193,7 +193,8 @@ Create dictionaries of terms to translate the labels for UI elements around your
     
     export function getLangFromUrl(url: URL) {
       const [, lang] = url.pathname.split('/');
-      return lang || defaultLang;
+      if (lang in ui) return lang as keyof typeof ui;
+      return defaultLang;
     }
     
     export function useTranslations(lang: keyof typeof ui) {
