--- a/src/content/docs/es/guides/cms/buttercms.mdx
+++ b/src/content/docs/es/guides/cms/buttercms.mdx
@@ -120,7 +120,7 @@ const fields = pageData.fields as Fields;
 </html>
 ```
 
-## Official Resources
+## Recursos Oficiales
 
 - [Astro + Tutorial ButterCMS](https://buttercms.com/starters/astro-starter-project/)
 - La [documentación completa de la API de ButterCMS](https://buttercms.com/docs/api/)
