--- a/src/content/docs/zh-cn/guides/markdown-content.mdx
+++ b/src/content/docs/zh-cn/guides/markdown-content.mdx
@@ -1,5 +1,5 @@
 ---
-title: Markdown
+title: Markdown & MDX
 description: 在 Astro 中使用 Markdown
 ---
 import Since from '~/components/Since.astro'
@@ -90,9 +90,7 @@ const nonDraftPosts = posts.filter((post) => !post.frontmatter.draft);
 
 #### 启用构建草稿页面
 
-To enable building draft pages by default, update `astro.config.mjs` by adding `drafts: true` to `markdown` or to the `mdx` integration:
-
-要启用默认构建草稿页面，
+要默认启用构建草稿页面，请通过添加 `drafts: true`到 `markdown` 或 `mdx` 集成来更新 `astro.config.mjs`：
 
 ```js title="astro.config.mjs" ins={5, 8}
 import { defineConfig } from 'astro/config';
@@ -108,7 +106,7 @@ export default defineConfig({
 ```
 
 :::tip
-You can also pass the `--drafts` flag when running `astro build` to build draft pages!
+你也可以在运行 `astro build` 时传递 `--drafts` 参数来构建草稿页面！
 :::
 
 ## Markdown 功能
@@ -131,7 +129,8 @@ description: 发现 Astro 的魅力所在！
 这是一个使用 Markdown 编写的文章。
 ```
 
-[Specific properties are then available to the layout component](/en/core-concepts/layouts/#markdown-layout-props)  through `Astro.props`. For example, you can access frontmatter properties through `Astro.props.frontmatter`:
+[特定的属性可以通过 `Astro.props` 传递给布局组件](/zh-cn/core-concepts/layouts/#markdown-layout-props)。例如，你可以通过 `Astro.props.frontmatter` 访问 frontmatter 属性：
+
 
 **`src/layouts/BlogPostLayout.astro`**
 
@@ -142,62 +141,63 @@ const {frontmatter} = Astro.props;
 <html>
   <!-- ... -->
   <h1>{frontmatter.title}</h1>
-  <h2>Post author: {frontmatter.author}</h2>
+  <h2>文章作者: {frontmatter.author}</h2>
   <p>{frontmatter.description}</p>
-  <slot /> <!-- Markdown content is injected here -->
+  <slot /> <!-- Markdown 内容被注入到这里 -->
    <!-- ... -->
 </html>
 ```
 
-You can also [style your Markdown](/en/guides/styling/#markdown-styling) in your layout component.
+你也可以在布局组件中[为你的 Markdown 设置样式](/zh-cn/guides/styling/#markdown-styling)。
 
-📚 Learn more about [Markdown Layouts](/en/core-concepts/layouts/#markdownmdx-layouts).
+📚 阅读更多关于 [Markdown 布局](/zh-cn/core-concepts/layouts/#markdown-布局)。
 
 ### 标题 ID
 
-Using headings in Markdown and MDX will automatically give you anchor links so you can link directly to certain sections of your page.
+使用 Markdown 和 MDX 中的标题将自动为你提供锚点链接，以便你可以直接链接到页面的某些部分。
 
 ```markdown title="src/pages/page-1.md"
 ---
 title: My page of content
 ---
-## Introduction
+## 介绍
 
-I can link internally to [my conclusion](#conclusion) on the same page when writing Markdown.
+我可以在编写 Markdown 时链接到同一页面上的[我的结论](#结论)。
 
-## Conclusion
+## 结论
 
-I can use the URL `https://my-domain.com/page-1/#introduction` to navigate directly to my Introduction on the page. 
+我可以使用 URL `https://my-domain.com/page-1/#介绍` 直接导航到页面上的介绍。
+
 ```
 
-### Escaping special characters
+### 转义特殊字符
 
-Certain characters have a special meaning in Markdown and MDX. You may need to use a different syntax if you want to display them. To do this, you can use [HTML entities](https://developer.mozilla.org/en-US/docs/Glossary/Entity) for these characters instead.
+某些字符在 Markdown 和 MDX 中具有特殊含义。 如果你想显示它们，你可能需要使用不同的语法。 要做到这一点，你可以使用这些字符的 [HTML 实体](https://developer.mozilla.org/zh-CN/docs/Glossary/Entity)。
 
-For example, to prevent `<` being interpreted as the beginning of an HTML element, write `&lt;`. Or, to prevent `{` being interpreted as the beginning of a JavaScript expression in MDX, write `&lcub;`.
+例如，要防止 `<` 被解释为 HTML 元素的开始，可以写 `&lt;`。 或者，要防止 `{` 被解释为 MDX 中 JavaScript 表达式的开始，可以写 `&lcub;`。
 
-## MDX-only Features
+## MDX 独有特性
 
-Adding the Astro [MDX integration](/en/guides/integrations-guide/mdx/) enhances your Markdown authoring with JSX variables, expressions and components. 
+添加 Astro [MDX 集成](/zh-cn/guides/integrations-guide/mdx/)可以使用 JSX 变量、表达式和组件来增强你的 Markdown 编写体验。
 
-It also adds extra features to standard MDX, including support for [Markdown-style frontmatter in MDX](https://mdxjs.com/guides/frontmatter/). This allows you to use most of Astro's built-in Markdown features like a [frontmatter `layout`](#frontmatter-layout) property and a setting for [draft pages](#draft-pages).
+它还为标准 MDX 添加了额外的功能，包括对 [MDX 中的 Markdown 样式 frontmatter](https://mdxjs.com/guides/frontmatter/)的支持。 这允许你使用 Astro 的大多数内置 Markdown 功能，例如 [frontmatter `layout`](#frontmatter-layout) 属性和 [草稿页面](#draft-pages) 的设置。
 
-`.mdx` files must be written in [MDX syntax](https://mdxjs.com/docs/what-is-mdx/#mdx-syntax) rather than Astro’s HTML-like syntax.
+`.mdx` 文件必须使用 [MDX 语法](https://mdxjs.com/docs/what-is-mdx/#mdx-syntax)编写，而不是 Astro 的 HTML 语法。
 
-### Using Exported Variables in MDX
+### 在 MDX 中使用导出的变量
 
-MDX supports using `export` statements to add variables to your MDX content. These variables are accessible both in the template itself and as named properties when [importing the file](#importing-markdown) somewhere else.
+MDX 支持使用 `export` 语句将变量添加到你的 MDX 内容中。 这些变量既可以在模板本身中访问，也可以在[导入文件](#importing-markdown)时以命名属性的形式访问。
 
-For example, you can export a `title` field from an MDX page or component to use as a heading with `{JSX expressions}`:
+例如，你可以从 MDX 页面或组件中导出一个 `title` 字段，以便使用 `{JSX expressions}` 作为标题：
 
 ```mdx title="/src/pages/posts/post-1.mdx"
 export const title = 'My first MDX post'
 
 # {title}
 ```
-### Using Frontmatter Variables in MDX
+### 在 MDX 中使用 Frontmatter 变量
 
-The Astro MDX integration includes support for using frontmatter in MDX by default. Add frontmatter properties just as you would in Markdown files, and these variables are accessible to use in the template, in its [`layout` component](#frontmatter-layout), and as named properties when [importing the file](#importing-markdown) somewhere else. 
+Astro MDX 集成默认支持在 MDX 中使用 frontmatter。 在 Markdown 文件中添加 frontmatter 属性，这些变量可在模板中、其 [`layout` 组件](#frontmatter-layout)中以及在 [导入文件](#importing-markdown)时以命名属性的形式访问。
 
 ```mdx title="/src/pages/posts/post-1.mdx"
 ---
@@ -208,40 +208,40 @@ title: 'My first MDX post'
 # {frontmatter.title}
 ```
 
-### Using Components in MDX
+### 在 MDX 中使用组件
 
-After installing the MDX integration, you can import and use both [Astro components](/en/core-concepts/astro-components/#component-props) and [UI framework components](/en/core-concepts/framework-components/#using-framework-components) in MDX (`.mdx`) files just as you would use them in any other Astro component. 
+安装 MDX 集成后，你可以在 MDX (`.mdx`) 文件中导入并使用 [Astro 组件](/zh-cn/core-concepts/astro-components/#组件参数)和 [UI 框架组件](/zh-cn/core-concepts/framework-components/#使用框架组件)。就像在任何其他 Astro 组件中使用它们一样。
 
-Don't forget to include a `client:directive` on your UI framework components, if necessary!
+不要忘记在你的 UI 框架组件上添加 `client:directive`，如果需要的话！
 
-See more examples of using import and export statements in the [MDX docs](https://mdxjs.com/docs/what-is-mdx/#esm).
+在 [MDX 文档](https://mdxjs.com/docs/what-is-mdx/#esm)中查看有关使用导入和导出语句的更多示例。
 
 ```mdx title="src/pages/about.mdx" {5-6} /<.+\/>/
 ---
 layout: ../layouts/BaseLayout.astro
-title: About me
+title: 关于我
 ---
 import Button from '../components/Button.astro';
 import ReactCounter from '../components/ReactCounter.jsx';
 
-I live on **Mars** but feel free to <Button title="Contact me" />.
+我住在 **火星** 上，但是随时可以 <Button title="联系我" />。
 
-Here is my counter component, working in MDX:
+这是我的计数器组件，它在 MDX 中工作：
 
 <ReactCounter client:load />
 ```
 
-#### Assigning Custom Components to HTML elements
+#### 将自定义组件分配给 HTML 元素
 
-With MDX, you can map Markdown syntax to custom components instead of their standard HTML elements. This allows you to write in standard Markdown syntax, but apply special component styling to selected elements.
+使用 MDX，你可以将 Markdown 语法映射到自定义组件，而不是它们的标准 HTML 元素。 这允许你以标准的 Markdown 语法编写，但是将特殊的组件样式应用于所选的元素。
 
-Import your custom component into your `.mdx` file, then export a `components` object that maps the standard HTML element to your custom component:
+将自定义组件导入 `.mdx`文件，然后导出将标准 HTML 元素映射到自定义组件的`components`对象：
 
 ```mdx title="src/pages/about.mdx"
 import Blockquote from '../components/Blockquote.astro';
 export const components = {blockquote: Blockquote}
 
-> This quote will be a custom Blockquote
+> 这个引用将是自定义引用块组件。
 ```
 
 
@@ -251,16 +251,16 @@ const props = Astro.props;
 ---
 <blockquote {...props} class="bg-blue-50 p-4">
   <span class="text-4xl text-blue-600 mb-2">“</span>
-  <slot /> <!-- Be sure to add a `<slot/>` for child content! -->
+  <slot /> <!-- 请务必为子组件添加`<slot/>`！ -->
 </blockquote>
 ```
-Visit the [MDX website](https://mdxjs.com/table-of-components/) for a full list of HTML elements that can be overwritten as custom components.
+访问 [MDX 网站](https://mdxjs.com/table-of-components/)，了解可以覆盖为自定义组件的 HTML 元素的完整列表。
 
 ## 导入 Markdown
 
-You can import Markdown and MDX files directly into your Astro files. This gives you access to their Markdown content, as well as other properties such as frontmatter values that can be used within Astro's JSX-like expressions. 
+你可以直接将 Markdown 和 MDX 文件导入到你的 Astro 文件中。 这使你可以访问它们的 Markdown 内容，以及可以在 Astro 的类 JSX 表达式中使用的其他属性，例如 frontmatter 值。
 
-You can import one specific page with an `import` statement, or multiple pages with [`Astro.glob()`](/en/guides/imports/#astroglob).
+你可以使用 `import` 语句导入一个特定的页面，也可以使用 [`Astro.glob()`](/zh-cn/guides/imports/#astroglob) 导入多个页面。
 
 ```astro title="src/pages/index.astro"
 ---
@@ -272,7 +272,7 @@ const posts = await Astro.glob('../pages/post/*.md');
 ---
 ```
 
-When you import Markdown and MDX files in an Astro component, you get an object containing their [exported properties](#exported-properties).
+当你在 Astro 组件中导入 Markdown 和 MDX 文件时，你会得到一个包含它们 [导出属性](#exported-properties) 的对象。
 
 ```md title="/src/pages/posts/great-post.md"
 ---
@@ -299,7 +299,7 @@ const posts = await Astro.glob('../pages/post/*.md');
 </ul>
 ```
 
-In MDX files, you can access properties from both frontmatter and `export` statements:
+在 MDX 文件中，你可以访问来自 frontmatter 和 `export` 语句的属性：
 
 ```mdx title="/src/pages/posts/mdx-post.mdx"
 ---
@@ -321,7 +321,7 @@ import * as greatPost from '../pages/post/mdx-post.mdx';
 <p>{greatPost.description}</p>
 ```
 
-You can optionally provide a type for the `frontmatter` variable using a TypeScript generic:
+你可以使用 TypeScript 泛型为 `frontmatter` 变量提供一个类型：
 
 ```astro title="src/pages/index.astro" ins={2-5} ins="<Frontmatter>"
 ---
@@ -338,27 +338,28 @@ const posts = await Astro.glob<Frontmatter>('../pages/post/*.md');
 </ul>
 ```
 
-### Exported Properties
+### 导出的属性
 
-:::note[Using an Astro layout?]
-See the [properties exported to an Astro layout component](/en/core-concepts/layouts/#markdown-layout-props) when using Astro's special [frontmatter layout](#frontmatter-layout).
+:::note[使用 Astro 布局？]
+请参阅 [导出到 Astro 布局组件的属性](/zh-cn/core-concepts/layouts/#markdown-layout-props)，了解在使用 Astro 的特殊 [frontmatter 布局](#frontmatter-layout) 时导出的属性。
 :::
 
-The following properties are available to a `.astro` component when using an `import` statement or `Astro.glob()`:
+以下属性可用于使用 `import` 语句或 `Astro.glob()` 时的 `.astro` 组件：
 
-- **`file`** - The absolute file path (e.g. `/home/user/projects/.../file.md`).
-- **`url`** - If it's a page, the URL of the page (e.g. `/en/guides/markdown-content`).
-- **`frontmatter`** - Contains any data specified in the file’s YAML frontmatter.
-- **`getHeadings`** - An async function that returns an array of all headings (i.e. `h1 -> h6` elements) in the file. Each heading’s `slug` corresponds to the generated ID for a given heading and can be used for anchor links. This list follows the type: `{ depth: number; slug: string; text: string }[]`.
-- **`Content`** - A component that returns the full, rendered contents of the file.
-- **(Markdown only) `rawContent()`** - A function that returns the raw Markdown document as a string.
-- **(Markdown only) `compiledContent()`** - A function that returns the Markdown document compiled to an HTML string. Note this does not include layouts configured in your frontmatter! Only the markdown document itself will be returned as HTML.
-- **(MDX only)** - MDX files can also export data with an `export` statement.
+- **`file`** - 绝对文件路径（例如 `/home/user/projects/.../file.md`）。
+- **`url`** - 如果是页面，则为页面的 URL（例如 `/zh-cn/guides/markdown-content`）。
+- **`frontmatter`** - 包含文件中指定的 YAML frontmatter 中的任何数据。
+- **`getHeadings`** - 一个异步函数，返回文件中所有标题（即 `h1 -> h6` 元素）的数组。 每个标题的 `slug` 对应于给定标题的生成的 ID，可用于锚链接。 此列表遵循类型：`{ depth: number; slug: string; text: string }[]`。
+- **`Content`** - 一个组件，返回文件的完整渲染内容。
+- **（Markdown only）`rawContent()`** - 一个函数，返回原始 Markdown 文档作为字符串。
+- **（Markdown only）`compiledContent()`** - 一个函数，返回将 Markdown 文档编译为 HTML 字符串。 请注意，这不包括 frontmatter 中配置的布局！ 只会将 Markdown 文档本身作为 HTML 返回。
+- **（MDX only）** - MDX 文件还可以使用 `export` 语句导出数据。
 
 
-### The `Content` Component
 
-Import `Content` to render a component that returns the full rendered contents of a Markdown or MDX file:
+### `Content` 组件
+
+使用 `Content` 组件导入一个组件，该组件返回 Markdown 或 MDX 文件的完整渲染内容：
 
 ```astro title="src/pages/content.astro" "Content"
 ---
@@ -369,11 +370,11 @@ import {Content as PromoBanner} from '../components/promoBanner.md';
 <PromoBanner />
 ```
 
-#### Example: Dynamic page routing
+#### 举例：动态页面路由
 
-Instead of putting your Markdown/MDX files in the `src/pages/` directory to create page routes, you can [generate pages dynamically](/en/core-concepts/routing/#dynamic-routes).
+相反，你可以使用[动态路由](/zh-cn/core-concepts/routing/#动态路由)动态生成页面。
 
-To access your Markdown content, pass the `<Content/>` component through the Astro page’s `props`. You can then retrieve the component from `Astro.props` and render it in your page template. 
+要访问 Markdown 内容，请将 `<Content/>` 组件传递给 Astro 页面的 `props`。 然后，您可以从 `Astro.props` 中检索该组件并在页面模板中渲染它。
 
 ```astro title="src/pages/[slug].astro" {9-11} "Content" "Astro.props.post"
 ---
@@ -398,17 +399,17 @@ const { Content } = Astro.props.post
 ```
 
 
-### MDX-only Exports
+### MDX 独有的导出
 
-MDX files can also export data with an `export` statement.
+MDX 文件还可以使用 `export` 语句导出数据。
 
-For example, you can export a `title` field from an MDX page or component.
+例如，你可以从 MDX 页面或组件中导出 `title` 字段。
 
 ```mdx title="/src/pages/posts/post-1.mdx"
 export const title = 'My first MDX post'
 ```
 
-This `title` will be accessible from `import` and [Astro.glob()](/en/reference/api-reference/#astroglob) statements:
+这个 `title` 将可以从 `import` 和 [Astro.glob()](/zh-cn/reference/api-reference/#astroglob) 语句中访问：
 
 ```astro
 ---
@@ -419,38 +420,38 @@ const posts = await Astro.glob('./*.mdx');
 {posts.map(post => <p>{post.title}</p>)}
 ```
 
-### Custom components with imported MDX
+### 使用导入的 MDX 的自定义组件
 
-When rendering imported MDX content, [custom components](#assigning-custom-components-to-html-elements) can be passed via the `components` prop.
+当渲染导入的 MDX 内容时，可以通过 `components` 属性传递 [自定义组件](#将自定义组件分配给-html-元素) 。
 
 ```astro title="src/pages/page.astro" "components={{...components, h1: Heading }}"
 ---
 import { Content, components } from '../content.mdx';
 import Heading from '../Heading.astro';
 ---
-<!-- Creates a custom <h1> for the # syntax, _and_ applies any custom components defined in `content.mdx` -->
+<!-- 为 # 语法创建自定义<h1>， _并且_ 在`content.mdx`中应用任何自定义组件 -->
 <Content components={{...components, h1: Heading }} />
 ```
 
 :::note
-Custom components defined and exported in an MDX file must be imported and then passed back to the `<Content />` component via the `components` property.
+在 MDX 文件中定义并导出的自定义组件必须通过 `components` 属性导入并传递回 `<Content />` 组件。
 :::
 
 ## 配置 Markdown
 
-Markdown support in Astro is powered by [remark](https://remark.js.org/), a powerful parsing and processing tool with an active ecosystem. Other Markdown parsers like Pandoc and markdown-it are not currently supported.
+Astro 中的 Markdown 支持由 [remark](https://remark.js.org/) 提供，remark 是一个强大的解析和处理工具，拥有一个活跃的生态系统。 目前不支持其他 Markdown 解析器，如 Pandoc 和 markdown-it。
 
-Astro applies the [GitHub-flavored Markdown](https://github.com/remarkjs/remark-gfm) and [SmartyPants](https://github.com/silvenon/remark-smartypants) plugins by default. This brings some niceties like generating clickable links from text, and formatting for [quotations and em-dashes](https://daringfireball.net/projects/smartypants/).
+Astro 默认应用 [GitHub 风格的 Markdown](https://github.com/remarkjs/remark-gfm) 和 [SmartyPants](https://github.com/silvenon/remark-smartypants) 插件。 这带来了一些便利，例如从文本生成可点击的链接，并格式化 [引用和 em-dashes](https://daringfireball.net/projects/smartypants/)。
 
-You can customize how remark parses your Markdown in `astro.config.mjs`. See the full list of [Markdown configuration options](/en/reference/configuration-reference/#markdown-options).
+你可以在 `astro.config.mjs` 中自定义 remark 解析 Markdown 的方式。 请参阅完整的 [Markdown 配置选项](/zh-cn/reference/configuration-reference/#markdown-选项)列表，。
 
-### Markdown Plugins
+### Markdown 插件
 
-Astro supports adding third-party [remark](https://github.com/remarkjs/remark) and [rehype](https://github.com/rehypejs/rehype) plugins for Markdown and MDX. These plugins allow you to extend your Markdown with new capabilities, like [auto-generating a table of contents](https://github.com/remarkjs/remark-toc), [applying accessible emoji labels](https://github.com/florianeckerstorfer/remark-a11y-emoji), and [styling your Markdown](/en/guides/styling/#markdown-styling). 
+Astro 支持添加第三方 [remark](https://github.com/remarkjs/remark) and [rehype](https://github.com/rehypejs/rehype) 和 [rehype](https://github.com/rehypejs/rehype) 插件来解析 Markdown 和 MDX。 这些插件允许你扩展你的 Markdown，以获得新的功能，例如 [自动生成目录](https://github.com/remarkjs/remark-toc)，[应用可访问的表情符号标签](https://github.com/florianeckerstorfer/remark-a11y-emoji)，以及 [为你的 Markdown 添加样式](/zh-cn/guides/styling/#markdown-样式)。
 
-We encourage you to browse [awesome-remark](https://github.com/remarkjs/awesome-remark) and [awesome-rehype](https://github.com/rehypejs/awesome-rehype) for popular plugins! See each plugin's own README for specific installation instructions.
+我们鼓励你浏览 [awesome-remark](https://github.com/remarkjs/awesome-remark) 和 [awesome-rehype](https://github.com/rehypejs/awesome-rehype) 来查看流行的插件！请参阅每个插件自己的 README 以获取特定的安装说明。
 
-This example applies [`remark-toc`](https://github.com/remarkjs/remark-toc) and [`rehype-accessible-emojis`](https://www.npmjs.com/package/rehype-accessible-emojis) to both Markdown and MDX files:
+这个例子将 [`remark-toc`](https://github.com/remarkjs/remark-toc) 和 [`rehype-accessible-emojis`](https://www.npmjs.com/package/rehype-accessible-emojis) 应用于 Markdown 和 MDX 文件：
 
 ```js title="astro.config.mjs"
 import { defineConfig } from 'astro/config';
@@ -459,66 +460,23 @@ import { rehypeAccessibleEmojis } from 'rehype-accessible-emojis';
 
 export default defineConfig({
   markdown: {
-    // Applied to .md and .mdx files
+    // 应用于 .md 和 .mdx 文件
     remarkPlugins: [remarkToc, rehypeAccessibleEmojis],
   },
 });
 ```
+  
+请注意，默认情况下，`remarkToc`需要页面上的 “ToC” 或 “Table of Contents” [标题](https://github.com/remarkjs/remark-toc#optionsheading)（不区分大小写）才能显示目录。
 
-Note that by default, `remarkToc` requires a "ToC" or "Table of Contents" [heading](https://github.com/remarkjs/remark-toc#optionsheading) (case-insensitive) on the page to show the table of contents.
+### 以编程方式修改 frontmatter
 
-#### Heading IDs and plugins
+你可以通过使用 [remark 或 rehype 插件](#markdown-插件) 为所有 Markdown 和 MDX 文件添加 frontmatter 属性。
 
-Astro injects an `id` attribute into all heading elements (`<h1>` to `<h6>`) in Markdown and MDX files and provides a `getHeadings()` utility for retrieving these IDs in [Markdown exported properties](#exported-properties).
-
-You can customize these heading IDs by adding a rehype plugin that injects `id` attributes (e.g. `rehype-slug`). Your custom IDs, instead of Astro's defaults, will be reflected in the HTML output and the items returned by `getHeadings()`.
-
-By default, Astro injects `id` attributes after your rehype plugins have run. If one of your custom rehype plugins needs to access the IDs injected by Astro, you can import and use Astro’s `rehypeHeadingIds` plugin directly. Be sure to add `rehypeHeadingIds` before any plugins that rely on it:
-
-```js title="astro.config.mjs" ins={2, 8}
-import { defineConfig } from 'astro/config';
-import { rehypeHeadingIds } from '@astrojs/markdown-remark';
-import { otherPluginThatReliesOnHeadingIDs } from 'some/plugin/source';
-
-export default defineConfig({
-  markdown: {
-    rehypePlugins: [
-      rehypeHeadingIds,
-      otherPluginThatReliesOnHeadingIDs,
-    ],
-  },
-});
-```
-
-#### Customizing a plugin
-
-In order to customize a plugin, provide an options object after it in a nested array. 
-
-The example below adds the [heading option to the `remarkToc` plugin](https://github.com/remarkjs/remark-toc#optionsheading) to change where the table of contents is placed, and the [`behavior` option to the `rehype-autolink-headings` plugin](https://github.com/rehypejs/rehype-autolink-headings#optionsbehavior) in order to add the anchor tag after the headline text.
-
-```js title="astro.config.mjs"
-import remarkToc from 'remark-toc';
-import { rehypeHeadingIds } from '@astrojs/markdown-remark';
-import rehypeSlug from 'rehype-slug';
-import rehypeAutolinkHeadings from 'rehype-autolink-headings';
-
-export default {
-  markdown: {
-    remarkPlugins: [ [remarkToc, { heading: "contents"} ] ],
-    rehypePlugins: [rehypeSlug, [rehypeAutolinkHeadings, { behavior: 'append' }]],
-  },
-}
-```
-
-### Modifying frontmatter programmatically
-
-You can add frontmatter properties to all of your Markdown and MDX files by using a [remark or rehype plugin](#markdown-plugins).
-
-1. Append a `customProperty` to the `data.astro.frontmatter` property from your plugin's `file` argument:
+1. 从插件的文件参数中将 `customProperty`  附加到 `data.astro.frontmatter` 属性：
 
     ```js title="example-remark-plugin.mjs"
     export function exampleRemarkPlugin() {
-      // All remark and rehype plugins return a separate function
+      // 所有 remark 和 rehype 插件都返回一个单独的函数
       return function (tree, file) {
         file.data.astro.frontmatter.customProperty = 'Generated property';
       }
@@ -528,10 +486,10 @@ You can add frontmatter properties to all of your Markdown and MDX files by usin
     :::tip
     <Since v="2.0.0" />
 
-    `data.astro.frontmatter` contains all properties from a given Markdown or MDX document. This allows you to modify existing frontmatter properties, or compute new properties from this existing frontmatter.
-    :::
+    `data.astro.frontmatter` 包含给定 Markdown 或 MDX 文档的所有属性。 这允许你修改现有的 frontmatter 属性，或者从现有的 frontmatter 计算新属性。
+    :::  
 
-2. Apply this plugin to your `markdown`  or `mdx` integration config:
+2. 将此插件应用于您的 `markdown` 或 `mdx` 集成配置：
 
     ```js title="astro.config.mjs" "import { exampleRemarkPlugin } from './example-remark-plugin.mjs';" "remarkPlugins: [exampleRemarkPlugin],"
     import { defineConfig } from 'astro/config';
@@ -545,7 +503,7 @@ You can add frontmatter properties to all of your Markdown and MDX files by usin
     });
     ```
 
-    or
+    或者
 
     ```js title="astro.config.mjs" "import { exampleRemarkPlugin } from './example-remark-plugin.mjs';" "remarkPlugins: [exampleRemarkPlugin],"
     import { defineConfig } from 'astro/config';
@@ -560,19 +518,20 @@ You can add frontmatter properties to all of your Markdown and MDX files by usin
     });
     ```
 
-Now, every Markdown or MDX file will have `customProperty` in its frontmatter, making it available when [importing your markdown](#importing-markdown) and from [the `Astro.props.frontmatter` property in your layouts](#frontmatter-layout).
+现在，每个 Markdown 或 MDX 文件都会在其 frontmatter 中有 `customProperty`，使其在 [导入你的 markdown](#导入-markdown) 时以及从 [布局中的 `Astro.props.frontmatter` 属性](#frontmatter-layout) 中可用。
 
-#### Example: calculate reading time
+#### 示例：计算阅读时间
 
-You can use a [remark plugin](https://github.com/remarkjs/remark) to add a reading time to your frontmatter. We recommend two helper packages:
-- [`reading-time`](https://www.npmjs.com/package/reading-time) to calculate minutes read
-- [`mdast-util-to-string`](https://www.npmjs.com/package/mdast-util-to-string) to extract all text from your markdown
+你可以使用 [remark 插件](https://github.com/remarkjs/remark) 来为你的 frontmatter 添加阅读时间。 我们推荐两个辅助包：
+
+- [`reading-time`](https://www.npmjs.com/package/reading-time) 来计算阅读时间
+- [`mdast-util-to-string`](https://www.npmjs.com/package/mdast-util-to-string) 来从你的 markdown 中提取所有文本
 
 ```shell
 npm install reading-time mdast-util-to-string
 ```
 
-We can apply these packages to a remark plugin like so:
+我们可以将这些包应用于 remark 插件，如下所示：
 
 ```js title="remark-reading-time.mjs"
 import getReadingTime from 'reading-time';
@@ -582,14 +541,14 @@ export function remarkReadingTime() {
   return function (tree, { data }) {
     const textOnPage = toString(tree);
     const readingTime = getReadingTime(textOnPage);
-    // readingTime.text will give us minutes read as a friendly string,
+    // readingTime.text 将给我们阅读时间的友好字符串，
     // i.e. "3 min read"
     data.astro.frontmatter.minutesRead = readingTime.text;
   };
 }
 ```
 
-Once you apply this plugin to your config:
+一旦你将这个插件应用到你的配置中：
 
 ```js title="astro.config.mjs" "import { remarkReadingTime } from './remark-reading-time.mjs';" "remarkPlugins: [remarkReadingTime],"
 import { defineConfig } from 'astro/config';
@@ -603,7 +562,7 @@ export default defineConfig({
 });
 ```
 
-...all Markdown documents will have a calculated `minutesRead`. You can use this to include an "X min read" banner in a [markdown layout](#markdown-and-mdx-pages), for instance:
+...所有的 Markdown 文档都会有一个计算的 `minutesRead`。 例如，你可以使用它在 [markdown 布局](#markdown-和-mdx-页面) 中包含一个 “X min read” 横幅：
 
 ```astro title="src/layouts/BlogLayout.astro" "const { minutesRead } = Astro.props.frontmatter;" "<p>{minutesRead}</p>"
 ---
@@ -619,11 +578,11 @@ const { minutesRead } = Astro.props.frontmatter;
 </html>
 ```
 
-### Extending Markdown config from MDX
+### 从 MDX 扩展 Markdown 配置
 
-Astro's MDX integration will extend [your project's existing Markdown configuration](/en/reference/configuration-reference/#markdown-options) by default. To override individual options, you can specify their equivalent in your MDX configuration.
+Astro 的 MDX 集成默认情况下会扩展 [你的项目的现有 Markdown 配置](/zh-cn/reference/configuration-reference/#markdown-选项)。 要覆盖单个选项，你可以在 MDX 配置中指定它们的等效项。
 
-The following example disables GitHub-Flavored Markdown and applies a different set of remark plugins for MDX files:
+下面的示例禁用了 GitHub-Flavored Markdown，并为 MDX 文件应用了不同的 remark 插件集：
 
 ```ts title="astro.config.mjs"
 import { defineConfig } from 'astro/config';
@@ -637,19 +596,18 @@ export default defineConfig({
   },
   integrations: [
     mdx({
-      // `syntaxHighlight` inherited from Markdown
-
-      // Markdown `remarkPlugins` ignored,
-      // only `remarkPlugin2` applied.
+      // `syntaxHighlight` 继承自 Markdown
+      // Markdown `remarkPlugins` 被忽略
+      // 仅应用 `remarkPlugin2`
       remarkPlugins: [remarkPlugin2],
-      // `gfm` overridden to `false`
+      // `gfm` 覆盖为 `false`
       gfm: false,
     })
   ]
 });
 ```
 
-To avoid extending your Markdown config from MDX, set [the `extendMarkdownConfig` option](/en/guides/integrations-guide/mdx/#extendmarkdownconfig) (enabled by default) to `false`:
+要避免从 MDX 扩展你的 Markdown 配置，请将 [`extendMarkdownConfig` 选项](/zh-cn/guides/integrations-guide/mdx/#extendmarkdownconfig) (enabled by default) to `false`:
 
 ```ts title="astro.config.mjs"
 import { defineConfig } from 'astro/config';
@@ -661,27 +619,27 @@ export default defineConfig({
   },
   integrations: [
     mdx({
-      // Markdown config now ignored
+      // Markdown 配置现在被忽略
       extendMarkdownConfig: false,
-      // No `remarkPlugins` applied
+      // 没有 `remarkPlugins` 应用
     })
   ]
 });
 ```
 
-### Syntax Highlighting
+### 语法高亮
 
-Astro comes with built-in support for [Shiki](https://shiki.matsu.io/) and [Prism](https://prismjs.com/). This provides syntax highlighting for:
+Astro 内置支持 [Shiki](https://shiki.matsu.io/) 和 [Prism](https://prismjs.com/)。 这为：
 
-- all code fences (\`\`\`) used in a Markdown or MDX file.
-- content within the [built-in `<Code />` component](/en/reference/api-reference/#code-) (powered by Shiki).
-- content within the [`<Prism />` component](/en/reference/api-reference/#prism-) (powered by Prism).
+- Markdown 或 MDX 文件中的所有代码块（\`\`\`）。
+- [内置的 `<Code />` 组件](/zh-cn/reference/api-reference/#code-) 中的内容（由 Shiki 提供支持）。
+- [`<Prism />` 组件](/zh-cn/reference/api-reference/#prism-) 中的内容（由 Prism 提供支持）。
 
-Shiki is enabled by default, preconfigured with the `github-dark` theme. The compiled output will be limited to inline `style`s without any extraneous CSS classes, stylesheets, or client-side JS.
+Shiki 默认启用，预配置为 `github-dark` 主题。 编译输出将限于内联 `style`，而不会包含任何冗余的 CSS 类、样式表或客户端 JS。
 
-#### Shiki configuration
+#### Shiki 配置
 
-Shiki is our default syntax highlighter. You can configure all options via the `shikiConfig` object like so:
+Shiki 是我们的默认语法高亮器。 你可以通过 `shikiConfig` 对象配置所有选项，如下所示：
 
 ```js title="astro.config.mjs"
 import { defineConfig } from 'astro/config';
@@ -689,23 +647,23 @@ import { defineConfig } from 'astro/config';
 export default defineConfig({
   markdown: {
     shikiConfig: {
-      // Choose from Shiki's built-in themes (or add your own)
+      // 选择 Shiki 内置的主题（或添加你自己的主题）
       // https://github.com/shikijs/shiki/blob/main/docs/themes.md
       theme: 'dracula',
-      // Add custom languages
-      // Note: Shiki has countless langs built-in, including .astro!
+      // 添加自定义语言
+      // 注意：Shiki 内置了无数语言，包括 .astro！
       // https://github.com/shikijs/shiki/blob/main/docs/languages.md
       langs: [],
-      // Enable word wrap to prevent horizontal scrolling
+      // 启用自动换行，以防止水平滚动
       wrap: true,
     },
   },
 });
 ```
 
-#### Adding your own theme
+#### 添加你自己的主题
 
-Instead of using one of Shiki’s predefined themes, you can import a custom theme from a local file.
+你可以从本地文件导入自定义主题，而不是使用 Shiki 的预定义主题之一。
 
 ```js title="astro.config.mjs"
 import { defineConfig } from 'astro/config';
@@ -718,44 +676,44 @@ export default defineConfig({
 });
 ```
 
-We also suggest reading [Shiki's own theme documentation](https://github.com/shikijs/shiki/blob/main/docs/themes.md#loading-theme) to explore more about themes, light vs dark mode toggles, or styling via CSS variables.
+我们还建议阅读 [Shiki 的主题文档](https://github.com/shikijs/shiki/blob/main/docs/themes.md#loading-theme)，以了解更多关于主题、深色模式切换或通过 CSS 变量进行样式设置的内容。
 
-#### Change Default Syntax Highlighting Mode
+#### 改变默认语法高亮模式
 
-If you'd like to switch to `'prism'` by default, or disable syntax highlighting entirely, you can use the `markdown.syntaxHighlighting` config object:
+如果你想要切换到 `'prism'` 作为默认值，或者完全禁用语法高亮，你可以使用 `markdown.syntaxHighlighting` 配置对象：
 
 ```js title="astro.config.mjs" ins={6}
 import { defineConfig } from 'astro/config';
 
 export default defineConfig({
   markdown: {
-    // Can be 'shiki' (default), 'prism' or false to disable highlighting
+    // 可以是 'shiki' (默认值)、'prism' 或 false 来禁用语法高亮
     syntaxHighlight: 'prism',
   },
 });
 ```
 
-#### Prism configuration
+#### Prism 配置
 
-If you opt to use Prism, Astro will apply Prism's CSS classes instead. Note that **you need to bring your own CSS stylesheet** for syntax highlighting to appear!
+如果你选择使用 Prism，Astro 将应用 Prism 的 CSS 类。 请注意，**你需要自己的 CSS 样式表**，以使语法高亮显示出来！
 
-1. Choose a premade stylesheet from the available [Prism Themes](https://github.com/PrismJS/prism-themes).
-2. Add this stylesheet to [your project's `public/` directory](/en/core-concepts/project-structure/#public).
-3. Load this into your page's `<head>` in a [layout component](/en/core-concepts/layouts/) via a `<link>` tag. (See [Prism basic usage](https://prismjs.com/#basic-usage).)
+1. 从可用的 [Prism 主题](https://github.com/PrismJS/prism-themes) 中选择一个预制的样式表。
+2. 将此样式表添加到 [你的项目的 `public/` 目录](/zh-cn/core-concepts/project-structure/#public)。
+3. 通过 `<link>` 标签在 [布局组件](/zh-cn/core-concepts/layouts/) 中的页面的 `<head>` 中加载此样式表。 (参见 [Prism basic usage](https://prismjs.com/#basic-usage).)
 
-You can also visit the [list of languages supported by Prism](https://prismjs.com/#supported-languages) for options and usage.
+你还可以访问 [Prism 支持的语言列表](https://prismjs.com/#supported-languages) 以获取选项和用法。
 
-## Fetching Remote Markdown
+## 请求远程 Markdown
 
-Astro was primarily designed for local Markdown files that could be saved inside of your project directory. However, there may be certain cases where you need to fetch Markdown from a remote source. For example, you may need to fetch and render Markdown from a remote API when you build your website (or when a user makes a request to your website, when using [SSR](/en/guides/server-side-rendering/)).
+Astro 主要设计用于可以保存在项目目录中的本地 Markdown 文件。 但是，在某些情况下，您可能需要从远程源获取 Markdown。 例如，您可能需要在构建网站时（或在使用 [SSR](/zh-cn/guides/server-side-rendering/) 时，用户向网站发出请求时）从远程 API 获取并呈现 Markdown。
 
-**Astro does not include built-in support for remote Markdown!** To fetch remote Markdown and render it to HTML, you will need to install and configure your own Markdown parser from npm. This **will not** inherit from any of Astro's built-in Markdown and MDX settings that you have configured. Be sure that you understand these limitations before implementing this in your project. 
+**Astro 不包含对远程 Markdown 的内置支持！** 要获取远程 Markdown 并将其呈现为 HTML，您需要从 npm 安装并配置自己的 Markdown 解析器。 这将不会从您配置的 Astro 的内置 Markdown 和 MDX 设置中继承。 在将其添加到您的项目之前，请确保您了解这些限制。
 
 ```astro title="src/pages/remote-example.astro"
 ---
-// Example: Fetch Markdown from a remote API 
-// and render it to HTML, at runtime.
-// Using "marked" (https://github.com/markedjs/marked)
+// 示例：从远程 API 请求 Markdown
+// 并且在运行时渲染为 HTML
+// 使用 "marked" (https://github.com/markedjs/marked)
 import { marked } from 'marked';
 const response = await fetch('https://raw.githubusercontent.com/wiki/adam-p/markdown-here/Markdown-Cheatsheet.md');
 const markdown = await response.text();
