fix broken link

--- a/src/content/docs/zh-cn/reference/api-reference.mdx
+++ b/src/content/docs/zh-cn/reference/api-reference.mdx
@@ -857,8 +857,8 @@ import type { CollectionEntry } from 'astro:content';
 一个用于编译给定的 Markdown 或 MDX 文档以进行渲染的函数。它返回以下属性：
 
 - `<Content />` - 用于在 Astro 文件中渲染文档内容的组件。
-- `headings` - 生成的标题列表，[与 Astro 的 `getHeadings()` 工具函数相同](/zh-cn/guides/markdown-content/#exported-properties) 在 Markdown 和 MDX 导入中。
-- `remarkPluginFrontmatter ` - 在应用 [remark 或 rehype 插件](/zh-cn/guides/markdown-content/#modifying-frontmatter-programmatically)后修改后的 frontmatter 对象。设置为类型 `any`。
+- `headings` - 生成的标题列表，[与 Astro 的 `getHeadings()` 工具函数相同](/zh-cn/guides/markdown-content/#导出的属性) 在 Markdown 和 MDX 导入中。
+- `remarkPluginFrontmatter ` - 在应用 [remark 或 rehype 插件](/zh-cn/guides/markdown-content/#以编程方式修改-frontmatter)后修改后的 frontmatter 对象。设置为类型 `any`。
 
 ```astro
 ---
