--- a/src/content/docs/zh-cn/guides/markdown-content.mdx
+++ b/src/content/docs/zh-cn/guides/markdown-content.mdx
@@ -497,8 +497,7 @@ export default defineConfig({
 
     export default defineConfig({
       markdown: {
-        remarkPlugins: [exampleRemarkPlugin],
-        extendDefaultPlugins: true,
+        remarkPlugins: [exampleRemarkPlugin]
       },
     });
     ```
@@ -556,8 +555,7 @@ import { remarkReadingTime } from './remark-reading-time.mjs';
 
 export default defineConfig({
   markdown: {
-    remarkPlugins: [remarkReadingTime],
-    extendDefaultPlugins: true,
+    remarkPlugins: [remarkReadingTime]
   },
 });
 ```
