fix broken link

--- a/src/content/docs/zh-cn/core-concepts/layouts.mdx
+++ b/src/content/docs/zh-cn/core-concepts/layouts.mdx
@@ -52,7 +52,7 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 
 ## Markdown 布局
 
-页面布局对于 [Markdown 文件](/zh-cn/guides/markdown-content/#markdown-页面)尤其有用。Markdown 文件可以在 frontmatter 顶部使用特殊的 `layout` 属性来指定要作为页面布局的 `.astro` 组件。
+页面布局对于 [Markdown 文件](/zh-cn/guides/markdown-content/#markdown-和-mdx-页面)尤其有用。Markdown 文件可以在 frontmatter 顶部使用特殊的 `layout` 属性来指定要作为页面布局的 `.astro` 组件。
 
 **`src/pages/posts/post-1.md`**
 
@@ -64,8 +64,6 @@ description: 我的第一篇博文!
 ---
 这是一篇用 Markdown 写的文章。
 ```
-
-页面布局对于 [Markdown 文件](/zh-cn/guides/markdown-content/#markdown-页面)特别有用。Markdown文件可以在 frontmatter 的顶部使用特殊的 `layout` 属性来指定使用哪个 `.astro` 组件作为页面布局。
 
 **`src/layouts/BlogPostLayout.astro`**
 
