--- a/src/content/docs/zh-cn/guides/markdown-content.mdx
+++ b/src/content/docs/zh-cn/guides/markdown-content.mdx
@@ -180,13 +180,13 @@ title: My page of content
 
 添加 Astro [MDX 集成](/zh-cn/guides/integrations-guide/mdx/)可以使用 JSX 变量、表达式和组件来增强你的 Markdown 编写体验。
 
-它还为标准 MDX 添加了额外的功能，包括对 [MDX 中的 Markdown 样式 frontmatter](https://mdxjs.com/guides/frontmatter/)的支持。 这允许你使用 Astro 的大多数内置 Markdown 功能，例如 [frontmatter `layout`](#frontmatter-layout) 属性和 [草稿页面](#draft-pages) 的设置。
+它还为标准 MDX 添加了额外的功能，包括对 [MDX 中的 Markdown 样式 frontmatter](https://mdxjs.com/guides/frontmatter/)的支持。 这允许你使用 Astro 的大多数内置 Markdown 功能，例如 [frontmatter `layout`](#frontmatter-layout) 属性和 [草稿页面](#草稿页面) 的设置。
 
 `.mdx` 文件必须使用 [MDX 语法](https://mdxjs.com/docs/what-is-mdx/#mdx-syntax)编写，而不是 Astro 的 HTML 语法。
 
 ### 在 MDX 中使用导出的变量
 
-MDX 支持使用 `export` 语句将变量添加到你的 MDX 内容中。 这些变量既可以在模板本身中访问，也可以在[导入文件](#importing-markdown)时以命名属性的形式访问。
+MDX 支持使用 `export` 语句将变量添加到你的 MDX 内容中。 这些变量既可以在模板本身中访问，也可以在[导入文件](#导入-markdown)时以命名属性的形式访问。
 
 例如，你可以从 MDX 页面或组件中导出一个 `title` 字段，以便使用 `{JSX expressions}` 作为标题：
 
@@ -197,7 +197,7 @@ export const title = 'My first MDX post'
 ```
 ### 在 MDX 中使用 Frontmatter 变量
 
-Astro MDX 集成默认支持在 MDX 中使用 frontmatter。 在 Markdown 文件中添加 frontmatter 属性，这些变量可在模板中、其 [`layout` 组件](#frontmatter-layout)中以及在 [导入文件](#importing-markdown)时以命名属性的形式访问。
+Astro MDX 集成默认支持在 MDX 中使用 frontmatter。 在 Markdown 文件中添加 frontmatter 属性，这些变量可在模板中、其 [`layout` 组件](#frontmatter-layout)中以及在 [导入文件](#导入-markdown)时以命名属性的形式访问。
 
 ```mdx title="/src/pages/posts/post-1.mdx"
 ---
@@ -272,7 +272,7 @@ const posts = await Astro.glob('../pages/post/*.md');
 ---
 ```
 
-当你在 Astro 组件中导入 Markdown 和 MDX 文件时，你会得到一个包含它们 [导出属性](#exported-properties) 的对象。
+当你在 Astro 组件中导入 Markdown 和 MDX 文件时，你会得到一个包含它们 [导出属性](#导出的属性) 的对象。
 
 ```md title="/src/pages/posts/great-post.md"
 ---
@@ -605,7 +605,7 @@ export default defineConfig({
 });
 ```
 
-要避免从 MDX 扩展你的 Markdown 配置，请将 [`extendMarkdownConfig` 选项](/zh-cn/guides/integrations-guide/mdx/#extendmarkdownconfig) (enabled by default) to `false`:
+要避免从 MDX 扩展你的 Markdown 配置，请将 [`extendMarkdownConfig` 选项](/zh-cn/guides/integrations-guide/mdx/#extendmarkdownconfig) (默认开启)设置为 `false`:
 
 ```ts title="astro.config.mjs"
 import { defineConfig } from 'astro/config';
