--- a/src/content/docs/zh-cn/reference/api-reference.mdx
+++ b/src/content/docs/zh-cn/reference/api-reference.mdx
@@ -130,7 +130,7 @@ import Heading from '../components/Heading.astro';
 <Heading title="我的第一篇文章" date="09 Aug 2022" />
 ```
 
-📚 进一步了解 [Markdown 和 MDX 布局](/zh-cn/guides/markdown-content/#markdown-布局)如何处理道具。
+📚 进一步了解 [Markdown 和 MDX 布局](/zh-cn/guides/markdown-content/#frontmatter-layout)如何处理 props。
 
 📚 了解如何为你的 props 添加 [TypeScript 类型定义](/zh-cn/guides/typescript/#组件参数)。
 
