--- a/src/content/docs/zh-cn/reference/cli-reference.mdx
+++ b/src/content/docs/zh-cn/reference/cli-reference.mdx
@@ -85,7 +85,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 #### `--drafts`
 
-在构建中包含 [Markdown 草稿页面](/zh-cn/guides/markdown-content/#markdown-草稿)。
+在构建中包含 [Markdown 草稿页面](/zh-cn/guides/markdown-content/#草稿页面)。
 
 ## `astro preview`
 
