--- a/src/content/docs/zh-cn/guides/troubleshooting.mdx
+++ b/src/content/docs/zh-cn/guides/troubleshooting.mdx
@@ -59,7 +59,7 @@ Astro 组件是在服务器上运行的，因此你不能在 frontmatter (代码
 
 ### 我的组件无法渲染
 
-首先，检查你是否在 [`.astro` 组件脚本](/zh-cn/core-concepts/astro-components/#组件脚本)或 [`.mdx` 文件](/zh-cn/guides/markdown-content/#在-markdown-中使用组件) 中**导入了该组件**。
+首先，检查你是否在 [`.astro` 组件脚本](/zh-cn/core-concepts/astro-components/#组件脚本)或 [`.mdx` 文件](/zh-cn/guides/markdown-content/#在-mdx-中使用组件) 中**导入了该组件**。
 
 然后检查你的导入语句。
 
