fix: Add space.mdx clarifications
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/content/docs/en/guides/deploy/space.mdx
+++ b/src/content/docs/en/guides/deploy/space.mdx
@@ -18,7 +18,7 @@ To push an Astro site to Space, make sure you first:
 - Create a [Space account](https://deta.space)
 - Install the [Space CLI](https://deta.space/docs/en/basics/cli) and log in
 
-No matter the type of Astro site you are building, create a Space project **inside** the directory of your Astro project. Run the CLI and follow the instructions on the screen.    
+Create a Space project **inside** the directory of your Astro project. Run the CLI and follow the instructions on the screen.    
 
 ```bash
 space new
