--- a/src/content/docs/en/guides/deploy/space.mdx
+++ b/src/content/docs/en/guides/deploy/space.mdx
@@ -15,8 +15,8 @@ This guide includes step-by-step instructions for building sites in Space. Both 
 
 To push an Astro site to Space, make sure you first:
 
-- Create a [Space account](https://deta.space)
-- Install the [Space CLI](https://deta.space/docs/en/basics/cli) and log in
+- Create a [Space account](https://deta.space).
+- Install the [Space CLI](https://deta.space/docs/en/basics/cli) and log in.
 
 Create a Space project **inside** the directory of your Astro project. Run the CLI and follow the instructions on the screen.    
 
