fix: Add space.mdx clarifications
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/content/docs/en/guides/deploy/space.mdx
+++ b/src/content/docs/en/guides/deploy/space.mdx
@@ -99,7 +99,7 @@ micros:
 
 ## How to deploy
 
-Once you have your project setup the only thing left to do is push your project to Space:
+Deploy your project with the following command:
 
 ```bash
 space push
