Translate 'front-matter' to 'フロントマター' in markdown-content.mdx based on the provided vocabulary list for translation

--- a/src/content/docs/ja/guides/markdown-content.mdx
+++ b/src/content/docs/ja/guides/markdown-content.mdx
@@ -40,7 +40,7 @@ title: Hello, World
 
 ### 下書きページ
 
-`draft: true`はオプションのfront-matterの値で、個々のMarkdownまたはMDXページや投稿を「非公開」としてマークできます。デフォルトでは、マークされたページは次の動作になります。
+`draft: true`はオプションのフロントマターの値で、個々のMarkdownまたはMDXページや投稿を「非公開」としてマークできます。デフォルトでは、マークされたページは次の動作になります。
 - サイトのビルド対象から外す（**ページはビルドされない**）
 - [`Astro.glob()`](/ja/reference/api-reference/#astroglob)によって返される (**投稿の一覧で表示されます**)
 
@@ -58,7 +58,7 @@ draft: true
 
 この記事をビルドして公開するには
 
-- front-matterを`draft: false`に更新する。
+- フロントマターを`draft: false`に更新する。
 - または、`draft`プロパティ全体を削除してください。
 
 しかし、このページは `Astro.glob()` にマッチするすべてのリクエストで返されます。
@@ -95,9 +95,9 @@ export default defineConfig({
 
 Astroは、MarkdownとMDXファイルを使用する際に利用できる、追加のビルトインMarkdown機能を提供します。
 
-### Front-matter `layout`
+### フロントマター `layout`
 
-Astroは、MarkdownおよびMDXページに、Astro[レイアウトコンポーネント](/ja/core-concepts/layouts/#markdownとmdxのレイアウト)への相対パス（または[エイリアス](/ja/guides/aliases/)）を指定できる特別なfront-matter用の`layout`プロパティを提供します。
+Astroは、MarkdownおよびMDXページに、Astro[レイアウトコンポーネント](/ja/core-concepts/layouts/#markdownとmdxのレイアウト)への相対パス（または[エイリアス](/ja/guides/aliases/)）を指定できる特別なフロントマター用の`layout`プロパティを提供します。
 
 **`src/pages/posts/post-1.md`**
 
@@ -111,7 +111,7 @@ description: Astroの凄さを知ってください！
 これはMarkdownで書かれた記事です。
 ```
 
-front-matterプロパティは、`Astro.props`を使ってレイアウトで利用できます。
+フロントマタープロパティは、`Astro.props`を使ってレイアウトで利用できます。
 
 
 **`src/layouts/BlogPostLayout.astro`**
@@ -160,7 +160,7 @@ URL`https://my-domain.com/page-1/#イントロダクション`を使って、ペ
 
 Astroの[MDXインテグレーション](/ja/guides/integrations-guide/mdx/)を追加すると、JSX変数、式、コンポーネントによってMarkdownオーサリングを強化できます。
 
-また、[MDXにおけるMarkdownスタイルのfront-matter](https://mdxjs.com/guides/frontmatter/)のサポートなど、標準的なMDXにさらに機能を追加しています。これにより、[front-matter `layout`](#front-matter-layout)プロパティや[下書きページ](#下書きページ)の設定など、Astroの組み込みMarkdown機能のほとんどを使用できます。
+また、[MDXにおけるMarkdownスタイルのフロントマター](https://mdxjs.com/guides/frontmatter/)のサポートなど、標準的なMDXにさらに機能を追加しています。これにより、[フロントマター `layout`](#フロントマター-layout)プロパティや[下書きページ](#下書きページ)の設定など、Astroの組み込みMarkdown機能のほとんどを使用できます。
 
 `.mdx`ファイルは、AstroのHTMLライクな構文ではなく、[MDX構文](https://mdxjs.com/docs/what-is-mdx/#mdx-syntax)で記述する必要があります。
 
@@ -176,9 +176,9 @@ export const title = 'はじめてのMDXの投稿'
 # {title}
 ```
 
-### MDXでfront-matter変数を使用する
+### MDXでフロントマター変数を使用する
 
-Astro MDXインテグレーションには、MDXでfront-matterを使用するためのサポートがデフォルトで含まれています。Markdownファイルと同じようにfrontmatterプロパティを追加すると、これらの変数はテンプレートや[`layout`コンポーネント](#front-matter-layout)内において、あるいはどこかに[ファイルをインポートする](#markdownのインポート)ときに名前付きプロパティとして使用する際にアクセスできます。
+Astro MDXインテグレーションには、MDXでフロントマターを使用するためのサポートがデフォルトで含まれています。Markdownファイルと同じようにfrontmatterプロパティを追加すると、これらの変数はテンプレートや[`layout`コンポーネント](#フロントマター-layout)内において、あるいはどこかに[ファイルをインポートする](#markdownのインポート)ときに名前付きプロパティとして使用する際にアクセスできます。
 
 ```mdx title="/src/pages/posts/post-1.mdx"
 ---
@@ -240,7 +240,7 @@ const props = Astro.props;
 
 ## Markdownのインポート
 
-MarkdownファイルやMDXファイルをAstroファイルに直接インポートできます。これにより、そのMarkdownコンテンツや、AstroのJSXライクな式で使用できるfront-matterの値などのプロパティにアクセスできます。
+MarkdownファイルやMDXファイルをAstroファイルに直接インポートできます。これにより、そのMarkdownコンテンツや、AstroのJSXライクな式で使用できるフロントマターの値などのプロパティにアクセスできます。
 
 `import`文で特定の1ページを、[`Astro.glob()`](/ja/guides/imports/)で複数のページをインポートできます。
 {/* TODO: インポートページが更新されたら /ja/guides/imports/#astroglob にリンク先を更新する */}
@@ -282,7 +282,7 @@ const posts = await Astro.glob('../pages/post/*.md');
 </ul>
 ```
 
-MDXファイルでは、front-matterと`export`文の両方からプロパティにアクセスできます。
+MDXファイルでは、フロントマターと`export`文の両方からプロパティにアクセスできます。
 
 ```mdx title="/src/pages/posts/mdx-post.mdx"
 ---
@@ -324,18 +324,18 @@ const posts = await Astro.glob<Frontmatter>('../pages/post/*.md');
 ### エクスポートしたプロパティ
 
 :::note[Astroレイアウトをお使いですか？]
-Astroの特別な[front-matterレイアウト](#front-matter-layout)を使用する際に、[Astroレイアウトコンポーネントにエクスポートされるプロパティ](/ja/core-concepts/layouts/#markdownとmdxのレイアウト)を参照してください。
+Astroの特別な[フロントマターレイアウト](#フロントマター-layout)を使用する際に、[Astroレイアウトコンポーネントにエクスポートされるプロパティ](/ja/core-concepts/layouts/#markdownとmdxのレイアウト)を参照してください。
 :::
 
 `.astro`コンポーネントで`import`文または`Astro.glob()`を使用した場合、以下のプロパティが使用できます。
 
 - **`file`** - ファイルの絶対パス（例：`/home/user/projects/.../file.md`）。
 - **`url`** - もしページなら、そのページのURL (例:`/en/guides/markdown-content`)。
-- **`frontmatter`** - ファイルのYAML front-matterで指定された全データを含みます。
+- **`frontmatter`** - ファイルのYAML フロントマターで指定された全データを含みます。
 - **`getHeadings`** - ファイル内のすべての見出し（すなわち`h1 -> h6`要素）の配列を返す非同期関数です。各見出しの`slug`は、与えられた見出しに対して生成されたIDに対応し、アンカーリンクに使用できます。このリストは次の型に従います。`{ depth: number; slug: string; text: string }[]`。
 - **`Content`** - ファイルのレンダリングされた完全なコンテンツを返すコンポーネントです。
 - **(Markdownのみ) `rawContent()`** - 生のMarkdownドキュメントを文字列として返す関数です。
-- **(Markdownのみ) `compiledContent()`** - HTML文字列にコンパイルされたMarkdownドキュメントを返す関数です。これはfront-matterで設定されたレイアウトを含まないことに注意してください。Markdownドキュメント自身のみがHTMLとして返されます。
+- **(Markdownのみ) `compiledContent()`** - HTML文字列にコンパイルされたMarkdownドキュメントを返す関数です。これはフロントマターで設定されたレイアウトを含まないことに注意してください。Markdownドキュメント自身のみがHTMLとして返されます。
 - **(MDXのみ)** - MDXファイルは、`export`文を使用してデータをエクスポートすることもできます。
 
 ### `Content` コンポーネント
@@ -452,7 +452,7 @@ export default {
 }
 ```
 
-#### 例：front-matterの挿入
+#### 例：フロントマターの挿入
 
 [remarkやrehypeのプラグイン](#markdownプラグイン)を使用することで、すべてのMarkdownファイルやMDXファイルにfrontmatterプロパティを追加できます。
 
@@ -494,7 +494,7 @@ export default {
     }
     ```
 
-これで、すべてのMarkdownまたはMDXファイルは、front-matterに`customProperty`を持ち、[Markdownのインポート](#markdownのインポート)時や[レイアウトの`Astro.props.frontmatter`プロパティ](#front-matter-layout)から利用できるようになります。
+これで、すべてのMarkdownまたはMDXファイルは、フロントマターに`customProperty`を持ち、[Markdownのインポート](#markdownのインポート)時や[レイアウトの`Astro.props.frontmatter`プロパティ](#フロントマター-layout)から利用できるようになります。
 
 #### 例：読書時間の計算
 
