Document rehype heading IDs plugin (#2216)
https://github.com/withastro/docs/commit/171ea37f0c3b8dab1a77a4826aa092ff24e663f6

--- a/src/content/docs/ja/guides/markdown-content.mdx
+++ b/src/content/docs/ja/guides/markdown-content.mdx
@@ -2,6 +2,7 @@
 title: MarkdownとMDX
 description: AstroでMarkdownやMDXを使ってコンテンツを作成する方法を紹介します。
 i18nReady: true
+setup: import Since from '~/components/Since.astro'
 ---
 
 [Markdown](https://daringfireball.net/projects/markdown/)は、ブログ投稿やドキュメントのようなテキストを多用するコンテンツのオーサリングによく使います。Astroは標準的なMarkdownファイルをビルトインでサポートしています。
@@ -451,6 +452,28 @@ export default {
   })],
 }
 ```
+
+#### Heading IDs and plugins
+
+Astro injects an `id` attribute into all heading elements (`<h1>` to `<h6>`) in Markdown and MDX files and provides a `getHeadings()` utility for retrieving these IDs in [Markdown exported properties](#exported-properties).
+
+You can customize these heading IDs by adding a rehype plugin that injects `id` attributes (e.g. `rehype-slug`). Your custom IDs, instead of Astro's defaults, will be reflected in the HTML output and the items returned by `getHeadings()`.
+
+By default, Astro injects `id` attributes after your rehype plugins have run. If one of your custom rehype plugins needs to access the IDs injected by Astro, you can import and use Astro’s `rehypeHeadingIds` plugin directly. Be sure to add `rehypeHeadingIds` before any plugins that rely on it:
+
+```js {2,7}
+// astro.config.mjs
+import { rehypeHeadingIds } from '@astrojs/markdown-remark';
+export default {
+  markdown: {
+    rehypePlugins: [
+      rehypeHeadingIds,
+      otherPluginThatReliesOnHeadingIDs,
+    ],
+  },
+}
+```
+
 
 #### 例：フロントマターの挿入
 
