--- a/src/content/docs/ja/guides/markdown-content.mdx
+++ b/src/content/docs/ja/guides/markdown-content.mdx
@@ -474,6 +474,21 @@ export default {
 }
 ```
 
+#### Customizing a plugin
+
+In order to customize a plugin, provide an options object after it in a nested array. The example below adds the [`behavior` option to the `rehype-autolink-headings` plugin](https://github.com/rehypejs/rehype-autolink-headings#optionsbehavior) in order to add the anchor tag after the headline text.
+
+```js title="astro.config.mjs"
+import { rehypeHeadingIds } from '@astrojs/markdown-remark';
+import rehypeSlug from 'rehype-slug';
+import rehypeAutolinkHeadings from 'rehype-autolink-headings';
+export default {
+  markdown: {
+    remarkPlugins: [],
+    rehypePlugins: [rehypeSlug, [rehypeAutolinkHeadings, { behavior: 'append' }]],
+  },
+}
+```
 
 #### 例：フロントマターの挿入
 
