--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -161,7 +161,7 @@ Astro doesn't have built-in internationalization (i18n) support, but you can bui
 
 Create dictionaries of terms to translate the labels for UI elements around your site. This allows your visitors to experience your site fully in their language.
 
-1. Create a `src/i18n/ui.ts` file to store your translation strings in:
+1. Create a `src/i18n/ui.ts` file to store your translation strings:
 
     ```ts
     // src/i18n/ui.ts
