--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -260,7 +260,7 @@ Create dictionaries of terms to translate the labels for UI elements around your
     </html>
     ```
 
-    Using this base layout will make sure our pages use the correct `lang` attribute automatically.
+    You can then use this base layout to ensure that pages use the correct `lang` attribute automatically.
     
     ```astro
     ---
