--- a/src/content/docs/en/recipes/i18n.mdx
+++ b/src/content/docs/en/recipes/i18n.mdx
@@ -237,7 +237,7 @@ Create dictionaries of terms to translate the labels for UI elements around your
     </ul>
     ```
 
-4. Each page should have a `lang` attribute on the `<html>` element that matches the language on the page. In this example, a [reusable layout](/en/core-concepts/layouts/) grabs the language from the route:
+4. Each page must have a `lang` attribute on the `<html>` element that matches the language on the page. In this example, a [reusable layout](/en/core-concepts/layouts/) extracts the language from the current route:
 
     ```astro
     ---
