--- a/src/content/docs/fr/guides/migrate-to-astro.mdx
+++ b/src/content/docs/fr/guides/migrate-to-astro.mdx
@@ -40,7 +40,7 @@ Astro vous permet de choisir entre un site généré statiquement et le [rendu c
 
 En fonction de votre projet existant, vous devrez peut-être penser différemment concernant :
 
-- Concevoir en [îles Astro](/fr/concepts/islands/#quest-ce-quune-île-astro) pour éviter d'envoyer du Javascript inutile au navigateur.
+- Concevoir en [îles Astro](/fr/concepts/islands/#quest-ce-quune-île-astro-) pour éviter d'envoyer du Javascript inutile au navigateur.
 
 - Fournir une interactivité côté client avec les [balises `<script>` côté client](/fr/guides/client-side-scripts/) ou les [composants de Framework UI](/fr/core-concepts/framework-components/).
 
