--- a/src/content/docs/ja/guides/markdown-content.mdx
+++ b/src/content/docs/ja/guides/markdown-content.mdx
@@ -198,7 +198,7 @@ export const title = 'はじめてのMDXの投稿'
 ```
 ### MDXでフロントマター変数を使用
 
-Astro MDXインテグレーションには、MDXでフロントマターを使用するためのサポートがデフォルトで含まれています。Markdownファイルと同じようにfrontmatterプロパティを追加すると、これらの変数はテンプレートや[`layout`コンポーネント](#フロントマター-layout)内において、あるいはどこかに[ファイルをインポートする](#markdownのインポート)ときに名前付きプロパティとして使用する際にアクセスできます。
+Astro MDXインテグレーションには、MDXでフロントマターを使用するためのサポートがデフォルトで含まれています。Markdownファイルと同じようにフロントマタープロパティを追加すると、これらの変数はテンプレートや[`layout`コンポーネント](#フロントマター-layout)内において、あるいはどこかに[ファイルをインポートする](#markdownのインポート)ときに名前付きプロパティとして使用する際にアクセスできます。
 
 ```mdx title="/src/pages/posts/post-1.mdx"
 ---
