--- a/src/content/docs/zh-cn/reference/cli-reference.mdx
+++ b/src/content/docs/zh-cn/reference/cli-reference.mdx
@@ -103,6 +103,14 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 该命令旨在用于 CI 工作流程。
 
+<h3>标志</h3>
+
+使用这些标志来自定义命令的行为。
+
+#### `--watch`
+
+该命令将监听 `.astro` 文件的任何更改，并报告任何错误。
+
 :::note
 该命令只检测 `.astro` 文件中的类型。
 :::
