--- a/src/content/docs/zh-cn/guides/markdown-content.mdx
+++ b/src/content/docs/zh-cn/guides/markdown-content.mdx
@@ -148,7 +148,7 @@ const {frontmatter} = Astro.props;
 </html>
 ```
 
-你也可以在布局组件中[为你的 Markdown 设置样式](/zh-cn/guides/styling/#markdown-styling)。
+你也可以在布局组件中[为你的 Markdown 设置样式](/zh-cn/guides/styling/#markdown-样式)。
 
 📚 阅读更多关于 [Markdown 布局](/zh-cn/core-concepts/layouts/#markdown-布局)。
 
