fix broken link

--- a/src/content/docs/zh-cn/guides/styling.mdx
+++ b/src/content/docs/zh-cn/guides/styling.mdx
@@ -485,7 +485,7 @@ Astro 中的 Svelte 也完全按照预期工作。[Svelte Styling Docs][svelte-s
 
 ## Markdown 样式
 
-任何 Astro 样式方法都可以用于 [Markdown 布局组件](/zh-cn/core-concepts/layouts/#markdownmdx-layouts)。
+任何 Astro 样式方法都可以用于 [Markdown 布局组件](/zh-cn/core-concepts/layouts/#markdownmdx-布局)。
 
 你可以通过向包装页面内容的布局中添加 [`<style>` 标签](#全局样式) 和 [导入的样式表](#外部样式) 来将全局样式应用于 Markdown 内容。你还可以添加 [CSS 集成](#css-集成)，包括 [Tailwind](/zh-cn/guides/integrations-guide/tailwind/)。
 
