--- a/src/content/docs/zh-cn/guides/markdown-content.mdx
+++ b/src/content/docs/zh-cn/guides/markdown-content.mdx
@@ -129,7 +129,7 @@ description: 发现 Astro 的魅力所在！
 这是一个使用 Markdown 编写的文章。
 ```
 
-[特定的属性可以通过 `Astro.props` 传递给布局组件](/zh-cn/core-concepts/layouts/#markdown-layout-props)。例如，你可以通过 `Astro.props.frontmatter` 访问 frontmatter 属性：
+[特定的属性可以通过 `Astro.props` 传递给布局组件](/zh-cn/core-concepts/layouts/#markdown-布局的-props)。例如，你可以通过 `Astro.props.frontmatter` 访问 frontmatter 属性：
 
 
 **`src/layouts/BlogPostLayout.astro`**
@@ -150,7 +150,7 @@ const {frontmatter} = Astro.props;
 
 你也可以在布局组件中[为你的 Markdown 设置样式](/zh-cn/guides/styling/#markdown-样式)。
 
-📚 阅读更多关于 [Markdown 布局](/zh-cn/core-concepts/layouts/#markdown-布局)。
+📚 阅读更多关于 [Markdown 布局](/zh-cn/core-concepts/layouts/#markdownmdx-布局)。
 
 ### 标题 ID
 
@@ -341,7 +341,7 @@ const posts = await Astro.glob<Frontmatter>('../pages/post/*.md');
 ### 导出的属性
 
 :::note[使用 Astro 布局？]
-请参阅 [导出到 Astro 布局组件的属性](/zh-cn/core-concepts/layouts/#markdown-layout-props)，了解在使用 Astro 的特殊 [frontmatter 布局](#frontmatter-layout) 时导出的属性。
+请参阅 [导出到 Astro 布局组件的属性](/zh-cn/core-concepts/layouts/#markdown-布局的-props)，了解在使用 Astro 的特殊 [frontmatter 布局](#frontmatter-layout) 时导出的属性。
 :::
 
 以下属性可用于使用 `import` 语句或 `Astro.glob()` 时的 `.astro` 组件：
