fix broken link

--- a/src/content/docs/zh-cn/guides/server-side-rendering.mdx
+++ b/src/content/docs/zh-cn/guides/server-side-rendering.mdx
@@ -161,7 +161,7 @@ const cookie = Astro.request.headers.get('cookie');
 
 这是一个用于读取和修改单个 cookie 的工具方法。 它允许您检查、设置、获取和删除 cookie。
 
-在 API 参考中查看有关 [`Astro.cookies` 和 `AstroCookie` 类型](/en/reference/api-reference/#astrocookies)的更多详细信息。
+在 API 参考中查看有关 [`Astro.cookies` 和 `AstroCookie` 类型](/zh-cn/reference/api-reference/#astrocookies)的更多详细信息。
 
 下面的示例更新了页面显示的计数器的 cookie 值。
 
@@ -227,4 +227,4 @@ if(!product) {
 
 ### 服务器端点
 
-服务器端点，也称为 **API 路由**，是从 `src/pages/` 文件夹中的 `.js`或 `.ts` 文件导出的特殊函数。该函数接收一个[端点上下文对象](/en/reference/api-reference/#endpoint-context)并返回一个 [Response](https://developer.mozilla.org/zh-CN/docs/Web/API/Response)。 这是 SSR 的一个强大功能，API 路由能够在服务器上安全地执行代码。 要了解更多信息，请参阅我们的[端点指南](/zh-cn/core-concepts/endpoints/#服务器端点api-路由)。
+服务器端点，也称为 **API 路由**，是从 `src/pages/` 文件夹中的 `.js`或 `.ts` 文件导出的特殊函数。该函数接收一个[端点上下文对象](/zh-cn/reference/api-reference/#端点上下文)并返回一个 [Response](https://developer.mozilla.org/zh-CN/docs/Web/API/Response)。 这是 SSR 的一个强大功能，API 路由能够在服务器上安全地执行代码。 要了解更多信息，请参阅我们的[端点指南](/zh-cn/core-concepts/endpoints/#服务器端点api-路由)。
