--- a/src/content/docs/zh-cn/guides/markdown-content.mdx
+++ b/src/content/docs/zh-cn/guides/markdown-content.mdx
@@ -191,7 +191,7 @@ MDX 支持使用 `export` 语句将变量添加到你的 MDX 内容中。 这些
 例如，你可以从 MDX 页面或组件中导出一个 `title` 字段，以便使用 `{JSX expressions}` 作为标题：
 
 ```mdx title="/src/pages/posts/post-1.mdx"
-export const title = 'My first MDX post'
+export const title = '我的第一篇 MDX 文章'
 
 # {title}
 ```
@@ -202,7 +202,7 @@ Astro MDX 集成默认支持在 MDX 中使用 frontmatter。 在 Markdown 文件
 ```mdx title="/src/pages/posts/post-1.mdx"
 ---
 layout: '../../layouts/BlogPostLayout.astro'
-title: 'My first MDX post'
+title: '我的第一篇 MDX 文章'
 ---
 
 # {frontmatter.title}
@@ -264,10 +264,10 @@ const props = Astro.props;
 
 ```astro title="src/pages/index.astro"
 ---
-// Import a single file
+// 导入单个文件
 import * as myPost from '../pages/post/my-post.md';
 
-// Import multiple files with Astro.glob
+// 使用 Astro.glob 导入多个文件
 const posts = await Astro.glob('../pages/post/*.md');
 ---
 ```
@@ -276,11 +276,12 @@ const posts = await Astro.glob('../pages/post/*.md');
 
 ```md title="/src/pages/posts/great-post.md"
 ---
-title: 'The greatest post of all time'
+title: '有史以来最好的文章'
 author: 'Ben'
 ---
 
 Here is my _great_ post!
+这是我的 _很棒_ 的文章！
 ```
 
 ```astro title="src/pages/my-posts.astro"
@@ -291,9 +292,9 @@ const posts = await Astro.glob('../pages/post/*.md');
 ---
 
 <p>{greatPost.frontmatter.title}</p>
-<p>Written by: {greatPost.frontmatter.author}</p>
+<p>作者：{greatPost.frontmatter.author}</p>
 
-<p>Post Archive:</p>
+<p>文章存档：</p>
 <ul>
   {posts.map(post => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
 </ul>
@@ -303,12 +304,12 @@ const posts = await Astro.glob('../pages/post/*.md');
 
 ```mdx title="/src/pages/posts/mdx-post.mdx"
 ---
-title: 'The greatest post of all time'
+title: '有史以来最好的文章'
 author: 'Ben'
 ---
-export const description = 'Get comfortable! This is going to be a great read.'
+export const description = '请舒适一点！这将是一篇很棒的文章！'
 
-Here is my _great_ post!
+这是我 _很棒_ 的文章！
 ```
 
 ```astro title="src/pages/my-posts.astro"
@@ -317,7 +318,7 @@ import * as greatPost from '../pages/post/mdx-post.mdx';
 ---
 
 <p>{greatPost.frontmatter.title}</p>
-<p>Written by: {greatPost.frontmatter.author}</p>
+<p>作者：{greatPost.frontmatter.author}</p>
 <p>{greatPost.description}</p>
 ```
 
@@ -334,7 +335,7 @@ const posts = await Astro.glob<Frontmatter>('../pages/post/*.md');
 
 <ul>
   {posts.map(post => <li>{post.frontmatter.title}</li>)}
-  <!-- post.frontmatter.title will be `string`! -->
+  <!-- post.frontmatter.title 会是 `string` 类型！ -->
 </ul>
 ```
 
@@ -366,7 +367,7 @@ const posts = await Astro.glob<Frontmatter>('../pages/post/*.md');
 import {Content as PromoBanner} from '../components/promoBanner.md';
 ---
 
-<h2>Today's promo</h2>
+<h2>今日促销</h2>
 <PromoBanner />
 ```
 
@@ -406,7 +407,7 @@ MDX 文件还可以使用 `export` 语句导出数据。
 例如，你可以从 MDX 页面或组件中导出 `title` 字段。
 
 ```mdx title="/src/pages/posts/post-1.mdx"
-export const title = 'My first MDX post'
+export const title = '我的第一个 MDX 文章'
 ```
 
 这个 `title` 将可以从 `import` 和 [Astro.glob()](/zh-cn/reference/api-reference/#astroglob) 语句中访问：
