--- a/src/content/docs/zh-cn/guides/styling.mdx
+++ b/src/content/docs/zh-cn/guides/styling.mdx
@@ -133,7 +133,7 @@ import MyComponent from "../components/MyComponent.astro"
     color: red;
   }
 </style>
-<MyComponent class="red">This will be red!</MyComponent>
+<MyComponent class="red">这将是红色！</MyComponent>
 ```
 
 这种模式可以让你直接给子组件添加样式。Astro 会自动将父组件的作用域类名（例如 `astro-HHNQFKH6`）通过 `class` 属性传递给子组件，使得子组件也在父组件的作用域中。
@@ -172,7 +172,7 @@ import MyComponent from "../components/MyComponent.astro"
 // 这也适用于预处理器文件，如 .scss、.styl 等。
 import '../styles/utils.css';
 ---
-<html><!-- Your page here --></html>
+<html><!-- 你的页面在这 --></html>
 ```
 
 任何 JavaScript 文件都支持通过 ESM `import`导入  CSS，包括像 React 和 Preact 这样的 JSX 组件。这有助于为 React 组件编写细化的，具有针对性的样式
@@ -186,7 +186,7 @@ import '../styles/utils.css';
 // src/pages/random-page.astro
 import 'package-name/styles.css';
 ---
-<html><!-- Your page here --></html>
+<html><!-- 你的页面在这 --></html>
 ```
 
 如果你所用的包**不建议使用文件扩展名**（即 `包名/样式`），那么你就需要先更新 Astro 配置 
@@ -218,7 +218,7 @@ export default defineConfig({
 // src/pages/random-page.astro
 import 'package-name/normalize';
 ---
-<html><!-- Your page here --></html>
+<html><!-- 你的页面在这 --></html>
 ```
 
 ### 通过 `link` 标签加载静态样式表
