--- a/src/content/docs/zh-cn/reference/api-reference.mdx
+++ b/src/content/docs/zh-cn/reference/api-reference.mdx
@@ -231,7 +231,6 @@ Astro.response.headers.set('Set-Cookie', 'a=b; Path=/;');
 | `set`              | `(key: string, value: string \| number \| boolean \| object, options?: CookieOptions) => void` | 将 cookie `key` 设置为给定的值。这将试图把 cookie 的值转换为一个字符串。选项提供了设置 [cookie 功能](https://www.npmjs.com/package/cookie#options-1)的方法，例如 `maxAge` 或 `httpOnly。`   |
 | `delete`           | `(key: string, options?: CookieDeleteOptions) => void` | 将 Cookie 标记为已删除。将 Cookie 标记为已删除。一旦 cookie 被删除，`Astro.cookies.has()` 将返回 `false`，`Astro.cookies.get()` 将返回一个值为 `undefined` 的 [`AstroCookie`](#astrocookie)。选项允许设置要删除的 Cookie 的`domain`和`path`。 |
 | `headers`          | `() => Iterator<string>` | 获取将与响应一起发送的 `Set-Cookie` 的 header 的值。   |
-"""
 
 #### `AstroCookie`
 
@@ -289,7 +288,7 @@ if (!isLoggedIn(cookie)) {
 ---
 // 示例：使用你的生产域名构建一个规范的URL
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-// 示例：使用你目前的域名构建一个用于SEO元标签的URL
+// 示例：使用你目前的域名构建一个用于 SEO meta 标签的URL
 const socialImageURL = new URL('/images/preview.png', Astro.url);
 ---
 <link rel="canonical" href={canonicalURL} />
@@ -789,10 +788,10 @@ export const collections = { blog };
 ---
 import { getCollection } from 'astro:content';
 
-// Get all `src/content/blog/` entries
+// 获取 `src/content/blog/` 中的所有条目
 const allBlogPosts = await getCollection('blog');
 
-// Only return posts with `draft: true` in the frontmatter
+// 仅返回 frontmatter 中 `draft: true` 的条目
 const draftBlogPosts = await getCollection('blog', ({ data }) => {
   return data.draft === true;
 });
@@ -836,7 +835,7 @@ import type { CollectionEntry } from 'astro:content';
 
 **示例类型** `'entry-1' | 'entry-2' | ...`
 
-一个 URL-ready 的 slug。默认情况下，它是 `id`，但可以通过在文件的 frontmatter 中设置 [the `slug` property](/zh-cn/guides/content-collections/#defining-custom-slugs) 来覆盖。  
+一个可用于 URL 的简短标识。默认情况下，它是 `id`，但可以通过在文件的 frontmatter 中设置 [`slug`属性](/zh-cn/guides/content-collections/#defining-custom-slugs) 来覆盖。  
 
 #### `data`
 
