Fix slice in content collections guide

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -555,6 +555,23 @@ This guide shows you how to convert an existing Astro project with Markdown file
     :::note
     Any individual Markdown or MDX file imports should be replaced by [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug).
     :::
+    
+8. Update the logic of extracting publish date in `layouts/MarkdownPostLayout.astro` file.
+
+    Previously, `pubDate` was a string. Now, after introducing types for our posts' frontmatter, `pubDate` is a `Date`.
+    Thanks to that, we can apply `Date` methods, like `toDateString()` on `pubDate`.
+
+    ```astro title="src/layouts/MarkdownPostLayout.astro" "frontmatter.pubDate.toDateString()"
+    ...
+    <BaseLayout pageTitle={frontmatter.title}>
+    <p>{frontmatter.pubDate.toDateString()}</p>
+    <p><em>{frontmatter.description}</em></p>
+    <p>Written by: {frontmatter.author}</p>
+    <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+    ...
+    ```
+    
+    Without that change, our blog posts would not render, since `slice` method does not exist on `Date`.
 
     Lastly, the tutorial blog project includes an RSS feed. This function must also use `getCollection` and the `data` object, and be converted to an async function to do so:
 
