--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -556,7 +556,7 @@ This guide shows you how to convert an existing Astro project with Markdown file
     Any individual Markdown or MDX file imports should be replaced by [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug).
     :::
     
-8. Update the logic of extracting publish date in `layouts/MarkdownPostLayout.astro` file.
+8. Update the logic of extracting publish date in the `layouts/MarkdownPostLayout.astro` file.
 
     Previously, `pubDate` was a string. Now, after introducing types for our posts' frontmatter, `pubDate` is a `Date`.
     Thanks to that, we can apply `Date` methods, like `toDateString()` on `pubDate`.
