Fix missing change in [tag].astro

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -521,7 +521,7 @@ This guide shows you how to convert an existing Astro project with Markdown file
 
     The tutorial blog project also dynamically generates a page for each tag. This page now becomes:
 
-    ```js title="src/pages/tags/[tag].astro" "post.data" "getCollection(\"posts\")"
+    ```js title="src/pages/tags/[tag].astro" "post.data" "getCollection(\"posts\")" "post.data.title"
     ...
     export async function getStaticPaths() {
       const allPosts = await getCollection("posts");
@@ -537,10 +537,21 @@ This guide shows you how to convert an existing Astro project with Markdown file
         };
       });
     }
-    ...
+    
+    const { tag } = Astro.params;
+    const { posts } = Astro.props;
+    ---
+
+    <BaseLayout pageTitle={tag}>
+        <p>Posts tagged with {tag}</p>
+        <ul>
+            { posts.map((post) => <BlogPost url={post.url} title={post.data.title} />) }
+        </ul>
+    </BaseLayout>
     ```
 
     The same logic appears in the tag index page, which becomes:
+    
     ```astro title="src/pages/tags/index.astro" "post.data" "getCollection(\"posts\")"
     ---
     import { getCollection } from "astro:content";
