fix: Add space.mdx clarifications
Co-authored-by: xeust <maxeust@gmail.com>

--- a/src/content/docs/en/guides/deploy/space.mdx
+++ b/src/content/docs/en/guides/deploy/space.mdx
@@ -25,7 +25,7 @@ space new
 ```
 
 :::note
-The Space CLI will try to detect the right configuration for your app. Accept the suggested configuration and follow the instructions below on how to configure it for your Astro app.
+The Space CLI will try to auto-detect the configuration for your app. Accept the suggested configuration and then follow the instructions below, depending on the type of Astro app you want to deploy.
 :::
 
 
