Apply suggestions from code review
Co-authored-by: Dan Jutan <danjutan@gmail.com>

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -567,10 +567,10 @@ This guide shows you how to convert an existing Astro project with Markdown file
     Any individual Markdown or MDX file imports should be replaced by [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug).
     :::
     
-8. Update the logic of extracting publish date in the `layouts/MarkdownPostLayout.astro` file.
+8. Update the code that uses the publish date in the `layouts/MarkdownPostLayout.astro` file.
 
-    Previously, `pubDate` was a string. Now, after introducing types for our posts' frontmatter, `pubDate` is a `Date`.
-    Thanks to that, we can apply `Date` methods, like `toDateString()` on `pubDate`.
+    Previously, `pubDate` was a string. Now, after introducing types for your posts' frontmatter, `pubDate` is a `Date`.
+    To render the date, convert it to a string:
 
     ```astro title="src/layouts/MarkdownPostLayout.astro" "frontmatter.pubDate.toDateString()"
     ...
@@ -582,7 +582,6 @@ This guide shows you how to convert an existing Astro project with Markdown file
     ...
     ```
     
-    Without that change, our blog posts would not render, since `slice` method does not exist on `Date`.
 
     Lastly, the tutorial blog project includes an RSS feed. This function must also use `getCollection` and the `data` object, and be converted to an async function to do so:
 
