Apply suggestions from code review
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -521,8 +521,8 @@ This guide shows you how to convert an existing Astro project with Markdown file
 
     The tutorial blog project also dynamically generates a page for each tag. This page now becomes:
 
-    ```js title="src/pages/tags/[tag].astro" "post.data" "getCollection(\"posts\")" "post.data.title"
-    ...
+    ```astro title="src/pages/tags/[tag].astro" "post.data" "getCollection(\"posts\")" "post.data.title"
+    ---
     export async function getStaticPaths() {
       const allPosts = await getCollection("posts");
       const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
