--- a/src/content/docs/es/tutorial/2-pages/2.mdx
+++ b/src/content/docs/es/tutorial/2-pages/2.mdx
@@ -21,7 +21,7 @@ Ahora que ya has creado páginas con archivos `.astro`, vamos a crear algunos po
 <PreCheck>
   - Crea una nueva carpeta y crea un nuevo post
   - Escribir contenido Markdown
-  - Enlace a sus posts en la página de su blog
+  - Enlaza tus posts en la página de tu blog
 </PreCheck>
 
 ## Crea tu primer archivo `.md`.
